--- a/pages/columns/@column/column-inspector/index.module.sass
+++ b/pages/columns/@column/column-inspector/index.module.sass
@@ -12,6 +12,7 @@
 
   max-width: 80rem
   margin: 0 auto
+  gap: 1em
 
 
 .left-column
@@ -38,7 +39,7 @@
 
 
 .column-view
-  margin: 0 4em 4em
+  margin: 0 0 4em
   padding: 0
 
 .column-header
@@ -116,3 +117,7 @@ rect.selection-overlay
   flex-direction: row
   align-items: baseline
   justify-content: space-between
+
+.isotopes-column
+  display: flex
+  flex-direction: row
