--- a/src/components/general/layout.module.sass
+++ b/src/components/general/layout.module.sass
@@ -189,6 +189,7 @@ a.macrostrat-logo-link
     font-weight: 400
     font-family: "Maven Pro", sans-serif
     margin: 0
+
   *
     font-family: "Publico Text", serif
 
@@ -205,4 +206,8 @@ a.macrostrat-logo-link
   height: 16px
 
 .tag-content
-  padding: .5em
+  padding: .25em
+  font-size: 0.9em
+  font-style: italic
+  color: var(--secondary-color)
+  background-color: var(--secondary-background)
