Map buttons highlight on click

--- a/src/components/lex/map.module.sass
+++ b/src/components/lex/map.module.sass
@@ -19,5 +19,15 @@
     justify-content: center
     cursor: pointer
 
+.selected
+    border-radius: 50%
+    background-color: var(--secondary-color)
+    width: 50px
+    height: 50px
+    display: flex
+    align-items: center
+    justify-content: center
+    cursor: pointer
+
 .icon
     cursor: pointer
