Fixed correlation spacing

--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -102,6 +102,8 @@ $map-size-inset: 12em
   height: 100%
   display: flex
   flex-direction: column
+  // Padding should be included in the fullscreen page, probably
+  padding: 2em
 
 
 .correlation-chart-inner
