Updated map ingestion page

--- a/pages/maps/ingestion/@id/components/main.module.sass
+++ b/pages/maps/ingestion/@id/components/main.module.sass
@@ -24,3 +24,9 @@
 .single-map
   flex-grow: 1
   min-height: 20%
+
+.map-controls
+  margin: 5px
+  background-color: var(--background-color)
+  pointer-events: all
+  width: fit-content
