Fixed section page

--- a/pages/maps/ingestion/@id/tables/edit-table.module.sass
+++ b/pages/maps/ingestion/@id/tables/edit-table.module.sass
@@ -25,10 +25,10 @@
 
 td
   text-wrap: nowrap
-  background-color: #ffffff78
+  background-color: var(--background-color)
 
 tr:nth-child(odd) td
-  background-color: #ffffff
+  background-color: var(--secondary-background)
 
 div.input-form
   display: flex
