Improved menu style

--- a/pages/map/map-interface/map-page/settings-panel.module.sass
+++ b/pages/map/map-interface/map-page/settings-panel.module.sass
@@ -1,6 +1,6 @@
 .control-label
   display: inline-flex
-  align-items center
+  align-items: center
   justify-content: space-between
   flex-grow: 1
 
@@ -56,7 +56,7 @@
         flex-grow: 1
 
       .spacer
-        flex-grow 1
+        flex-grow: 1
 
       .bp6-button
         width: auto
@@ -87,7 +87,7 @@
 
 
 .flex-row
-  align-items baseline
+  align-items: baseline
   max-width: 100%
   margin: 0 1em
 
