--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -23,7 +23,8 @@
 
 body
   font-family: var(--sans-serif-font)
-  font-size: 16px
+  // Default to 14px for the map interface
+  font-size: 14px
 
 h1, h2, h3, h4, h5, h6
   font-family: var(--header-font)
