Mostly fixed macrostrat linked panel

--- a/pages/map/map-interface/components/info-drawer/main.module.sass
+++ b/pages/map/map-interface/components/info-drawer/main.module.sass
@@ -41,6 +41,10 @@
 // max-height: calc(100vh - 60px)
 // transition: max-height 0.5s ease-in-out 0.25s
 
+.data-source
+  font-size: 85%
+  font-weight: 400
+  margin-left: 1em
 
 .spacer
   flex-grow: 1
