Updates to info drawer

--- a/pages/map/map-interface/components/info-drawer/main.module.sass
+++ b/pages/map/map-interface/components/info-drawer/main.module.sass
@@ -41,6 +41,10 @@
 // max-height: calc(100vh - 60px)
 // transition: max-height 0.5s ease-in-out 0.25s
 
+.age-refinement
+  flex-direction: column
+  align-items: center
+
 .data-source
   font-size: 85%
   font-weight: 400
