--- a/pages/map/map-interface/components/info-drawer/main.module.sass
+++ b/pages/map/map-interface/components/info-drawer/main.module.sass
@@ -72,4 +72,11 @@
     border-radius: 3px
     margin-bottom: 1px
 
+.long-text-field
+  p
+    display: inline
+  //text-align: justify
 
+.unit-info
+  display: flex
+  flex-direction: row
