--- a/pages/map/map-interface/components/info-drawer/main.module.sass
+++ b/pages/map/map-interface/components/info-drawer/main.module.sass
@@ -2,6 +2,16 @@
   flex-grow: 1
   pointer-events: none
 
+.info-drawer > header
+  text-wrap: nowrap
+
+  // TODO: integrate this with the panel header styles
+  :global(.elevation)
+    flex-shrink: 1
+    // allow text to truncate with ellipsis if it exceeds available space
+    overflow: hidden
+    text-overflow: ellipsis
+
 .infodrawer-content
   margin: 0
 
