Updated line info

--- a/pages/map/map-interface/components/info-drawer/main.module.sass
+++ b/pages/map/map-interface/components/info-drawer/main.module.sass
@@ -90,3 +90,15 @@
 .unit-info
   display: flex
   flex-direction: row
+
+.map-lines
+  padding-left: 1em
+  flex-grow: 2
+
+.line-info
+  .basic-info
+    .line-name
+      &:after
+        content: " – "
+    &:after
+      content: ": "
